--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "ejs": "^2.5.2",
-    "express": "~4.14.0",
-    "jade": "~1.11.0",
-    "mongoose": "^4.6.7",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "debug": "^4.3.6",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "jade": "^1.11.0",
+    "mongoose": "^8.5.2",
+    "morgan": "^1.10.0",
+    "serve-favicon": "^2.5.0"
   }
 }
